--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -3,7 +3,7 @@
   <section class="cart-section">
     <div *ngIf="cartProducts.length == 0">
       <div class="empty_cart">
-        <img src="../../assets/empty_cart.jpg" alt="No cart items are selected">
+        <img src="assets/empty_cart.jpg" alt="No cart items are selected">
         <h4>Unfortunately, your cart is empty</h4>
         <p>Please add something into your cart</p>
         <button type="button" class="btn btn-md no-cart-btn" (click)="addItem()">Continue Shopping</button>
@@ -16,95 +16,70 @@
           <button type="button" class="btn btn-danger del-btn" (click)="deleteCarItem(1,0)">Delete All</button>
         </div>
         <div class="shopping-cart">
-            <div class="row bg">
-                <div class="col-md-2 center">
-                  <p><b>Product</b></p>
-                </div>
-                <div class="col-md-2 center">
-                  <p><b>Product Name</b></p>
-                </div>
-                <div class="col-md-2 center">
-                  <p><b>Price per Item</b></p>
-                </div>
-                <div class="col-md-2 center">
-                  <p><b>Quantity</b></p>
-                </div>
-                <div class="col-md-2 center">
-                  <p><b>Total Price</b></p>
-                </div>
-            </div>   
-          <div class="product" *ngFor="let cart of cartProducts; let i = index">
-            <div *ngIf="cart.type_id == 1">
-              <div class="product-image">
-                <img src="assets/cement.jpg" />
-              </div>
-              <div class="">
-                <div class="product-details">
-                  <div class="product-title">{{ cart.company_name }}</div>
-                </div>
-                <div class="product-price">
-                  <p>&#8360; {{ cart.price }}</p>
-                </div>
-                <div class="product-quantity">
-                  <input type="" value="{{ cart.quantity }}" (input)="chageCartValue( cart, 0, $event.target.value, 1)" />
-                </div>
-                <div class="product-line-price">
-                  <p>&#8360; {{ cart.totalPrice }}</p>
-                </div>
-              </div>  
-              <div class="product-removal">
-                <div (click)="deleteCarItem(0, cart.cart_id)">
+          <table>
+            <tr class="table-head">
+              <th>Product</th>
+              <th>Product Name</th>
+              <th>Price per Item</th>
+              <th>Quantity</th>
+              <th>Total Price</th>
+              <th></th>
+            </tr>
+            <tbody class="table-body product" *ngFor="let cart of cartProducts; let i = index">  
+              <tr *ngIf="cart.type_id == 1">
+                <td>
+                  <img class="product-image" src="assets/cement.jpg" />
+                </td>  
+                <td>{{ cart.company_name }}</td>
+                <td>&#8360; {{ cart.price }}</td>
+                <td>
+                  <!-- <div class="quantity"> -->
+                    <input class="custom-input" type="" value="{{ cart.quantity }}" (input)="chageCartValue( cart, 0, $event.target.value, 1)"/>
+                  <!-- </div>   -->
+                </td>  
+                <td>&#8360; {{ cart.totalPrice }}</td>
+                <td class="product-removal" (click)="deleteCarItem(0, cart.cart_id)">
                   <i class="fa fa-times"></i>
-                </div>
-              </div>
-            </div>
-          <!-- bar data -->
-            <div *ngIf="cart.type_id == 2">
-              <div class="product-image">
-                <img src="assets/cement.jpg" />
-              </div>
-              <div class="product-details">
-                <div class="product-title">{{ cart.company_name }}</div>
-              </div>
-              <div class="product-price">
-                <p *ngFor="let bars of cart.bar_products">&nbsp;{{bars.type}}<span>&#8211;</span>&nbsp;
-                  <span>&#8360;&nbsp;</span> {{ bars.value }}&nbsp;<span>&#215;&nbsp;</span></p>
-              </div>
-              <div class="product-quantity">
-                <div *ngFor="let bars of cart.bar_products">
-                  <input type="" class="bottom" value="{{bars.quantity}}" (input)="chageCartValue( cart, bars, $event.target.value, 2)" /> 
-                </div>
-              <!-- <div> 
-                  <p class="total"> Total Amount =
-                    &#8360; {{cart.barTotal}}</p>
-                </div> -->
-              </div>
-              <div class=" product-line-price" >
-                <p *ngFor="let bars of cart.bar_products"> &#8360; {{ bars.value*bars.quantity }}</p>
-                <!-- <p>&#8360; {{ cart.barTotal }}</p> -->
-              </div>
-              <div class="product-removal">
-                <div (click)="deleteCarItem(0, cart.cart_id)">
+                </td>
+              </tr>
+              <tr *ngIf="cart.type_id == 2">   
+                <td>
+                  <img class="product-image" src="assets/cement.jpg" />
+                </td>
+                <td>{{ cart.company_name }}</td> 
+                <td>
+                    <p class="bar-inputs bar-price" *ngFor="let bars of cart.bar_products">&nbsp;{{bars.type}}<span>&#8211;</span>&nbsp;
+                      <span>&#8360;&nbsp;</span> {{ bars.value }}&nbsp;<span>&#215;&nbsp;</span>
+                    </p>
+                </td> 
+                <td class="input1">
+                  <!-- <div class="quantity"> -->
+                    <input *ngFor="let bars of cart.bar_products" class="custom-input bar-inputs" type="" value="{{bars.quantity}}" (input)="chageCartValue( cart, bars, $event.target.value, 2)" /> 
+                  <!-- </div>    -->
+                </td>  
+                <td>
+                  <p class="bar-inputs bar-price" *ngFor="let bars of cart.bar_products"> &#8360; {{ bars.value*bars.quantity }}</p>
+                </td> 
+                <td class="product-removal" (click)="deleteCarItem(0, cart.cart_id)">
                   <i class="fa fa-times"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="totals">
-            <div class="totals-item totals-item-total">
-              <label>Grand Total:</label>
-              <div class="totals-value" id="cart-total">
-                <p>&#8360; {{ totGrandamount }}</p>
-              </div>
-            </div>
+                </td> 
+              </tr>  
+            </tbody>   
+          </table> 
+        </div>
+        <div class="totals">
+          <div class="totals-item totals-item-total">
+            <label>Grand Total:</label>
+            <!-- <div> -->
+              <p class="totals-value" id="cart-total">&#8360; {{ totGrandamount }}</p>
+            <!-- </div> -->
           </div>
         </div>
       </div>
-    </div>    
-    <div class="container">
-      <div class="empty-cart">
-        <button type="button" class="btn btn-md checkout-btn" (click) = "checkOut()">CheckOut</button>
+      <div class="container">
+        <div class="empty-cart">
+          <button type="button" class="btn btn-md checkout-btn" (click) = "checkOut()">CheckOut</button>
+        </div>
       </div>
-    </div>
+    </div> 
   </section>
-
