--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -1,30 +1,30 @@
 <section class="container">
-  <div class="col-md-12">
+  <!-- <div class="col-md-12"> -->
     <div class="row">
       <div class="col-md-6">
           <div class="userdata">
               <div class=" form-group form-fields">
-                  <label class="col-md-3">Name:</label>
-                  <input class="col-md-6 form-control" readonly value="{{ userDetails.owner_name }}"/>
+                  <label class="col-md-2">Name:</label>
+                  <input class="col-md-10 form-control" readonly value="{{ userDetails.owner_name }}"/>
               </div>
               <div class=" form-group form-fields">
-                  <label class="col-md-3">Email:</label>
-                  <input class="col-md-6 form-control"   readonly value="{{ userDetails.email }}" />
+                  <label class="col-md-2">Email:</label>
+                  <input class="col-md-10 form-control"   readonly value="{{ userDetails.email }}" />
               </div>
               <div class=" form-group form-fields">
-                  <label class="col-md-3">Phone No:</label>
-                  <input class="col-md-6 form-control" readonly value="{{ userDetails.mobile_number }}" />
+                  <label class="col-md-2">Phone No:</label>
+                  <input class="col-md-10 form-control" readonly value="{{ userDetails.mobile_number }}" />
               </div>
-              <div class=" form-group form-fields">
-                  <label class="col-md-3">Reference Number:</label>
-                  <input class="col-md-6 form-control"  value="" placeholder="(optional)" (input)="referenceNumber($event.target.value)">
+              <div class=" form-group form-fields"> 
+                  <label class="col-md-2">Reference Number:</label>
+                  <input class="col-md-10 form-control"  value="" placeholder="(optional)" (input)="referenceNumber($event.target.value)">
               </div>
-              <div class=" form-group form-fields">
-                <label class="col-md-3">Reference Name:</label>
-                <input class="col-md-6 form-control"  value="" placeholder="(optional)" (input)="referenceName($event.target.value)"/>
+              <div class=" form-group form-fields"> 
+                <label class="col-md-2">Reference Name:</label>
+                <input class="col-md-10 form-control"  value="" placeholder="(optional)" (input)="referenceName($event.target.value)"/>
             </div>
               <div class="button">
-                  <button class="btn btn-primary" (click) = "addNewDeliveryAddress()">Add New Address</button>
+                  <button class="btn add-btn" (click) = "addNewDeliveryAddress()">Add New Address</button>
               </div>
           </div>
           <div class="typeofaddress" *ngIf="showhideAddressForm">
@@ -60,8 +60,8 @@
           </div>
       </div>
   </div>
-</div>
+<!-- </div> -->
 </section>
 <div>
-  <button class="confirm  btn-sm btn-primary" (click) = "confirmOrder()">Confirm & Submit</button>
+  <button class="confirm  btn-sm confirm-btn" (click) = "confirmOrder()">Confirm & Submit</button>
 </div>
