--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -119,7 +119,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="customer-profile">
-                        <img src="../../assets/user.jpg" alt="">
+                        <img src="assets/user.jpg" alt="">
                     </div>
                     <div class="customer-desc">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
@@ -131,7 +131,7 @@
                 </div>    
                 <div class="col-md-4">
                     <div class="customer-profile">
-                        <img src="../../assets/user.jpg" alt="">
+                        <img src="assets/user.jpg" alt="">
                     </div>
                     <div class="customer-desc">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
@@ -143,7 +143,7 @@
                 </div> 
                 <div class="col-md-4">
                     <div class="customer-profile">
-                        <img src="../../assets/user.jpg" alt="">
+                        <img src="assets/user.jpg" alt="">
                     </div>
                     <div class="customer-desc">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
