--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -29,7 +29,7 @@
       </button>
     </div>  
     <div class="collapse navbar-collapse justify-content-end" id="menu">
-      <ul class="navbar-nav">
+      <ul class="navbar navbar-nav">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="home"><i class="fa fa-home cart-custom"></i>Home</a>
         </li>
