changes in abou,checkout,contact,home and footer components

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -39,6 +39,7 @@
 
 .customer-report {
     text-align: center;
+    margin-bottom: 50px;
     .customer-profile {
       img {
         height: 100px;
