--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -86,7 +86,7 @@
 /*============ START SUBSCRIBE SECTION================*/
 .position {
   position: relative;
-  margin-top: 70px;
+  // margin-top: 70px;
   .subscribe{
     background-color: #f7f6f2;
     padding: 50px;
