--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -3,6 +3,7 @@ section {
    .contact {
         background-color: #f7f6f2;
         padding: 40px;
+        margin-bottom: 100px;
 
         .contact-details {
             background-color: #fff;
