--- a/src/app/user-layout/user-layout.component.scss
+++ b/src/app/user-layout/user-layout.component.scss
@@ -3,8 +3,8 @@
   height: 100%;
   z-index: 20;
   padding-top: 27px;
-  background: #222d32;
-  box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.08);
+  background: #f7f6f2;
+  // box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.08);
   margin-left: -15px;
   // @include mobile {
   //   width: 70px;
