--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -33,10 +33,14 @@
                                 data-required-message="" data-msg-containerid="requiredError"/>
                         </div>
                         <div id="requiredError"></div>
-                    </div>    
-                    <div class="button">
-                        <button class="btn add-btn" (click) = "addNewDeliveryAddress()"> + New Address</button>
-                    </div>
+                    </div>  
+                </div>
+            </div> 
+        </div> 
+        <div class="card">
+            <div class="card-body">
+                <div class="button">
+                    <button class="btn add-btn" (click) = "addNewDeliveryAddress()"> + New Address</button>
                 </div>
                 <div class="typeofaddress" *ngIf="showhideAddressForm">
                     <form class="address" [formGroup]="addressForm"
@@ -58,9 +62,9 @@
                             <button class="btn btn-md" type="submit">Submit</button>
                         </div>
                     </form>
-                </div>  
-            </div> 
-        </div>   
+                </div> 
+            </div>
+        </div>  
       </div>
       <div class="col-md-6">
         <div class="card">  
