--- a/src/app/check-out/check-out.component.scss
+++ b/src/app/check-out/check-out.component.scss
@@ -36,6 +36,7 @@
 .card { 
   background-color: #f7f6f2;
   border: none;
+  margin-top: 15px;
   .userdata {
     padding: 8px;
     @include mobile {
@@ -93,7 +94,8 @@
   margin-bottom: 10px;
   //margin-top: px;
   margin-bottom: 30px;
-  border: solid lightgray 1.5px;
+  // border: solid lightgray 1.5px;
+  background-color: #fff;
 }
 
 .confirm-btn {
