--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -43,11 +43,11 @@
                         (ngSubmit)="createNewAddress()">
                         <div class="form-group">
                             <label>Select Type</label>
-                            <select class="form-control" name="Type" (change)="onchange($event.target.value)">
-                                <option value="type">Select</option>
-                                <option value="Home">Home</option>
-                                <option value="Office">Office</option>
-                                <option value="Other">Other</option>
+                            <select class="form-control" formControlName="address_type">
+                                <!-- <option value="type">Select</option> -->
+                                <option  value ="{{types.address_type_id}}" *ngFor="let types of addressTypes">{{types.type_name}}
+                                   
+                                </option>           
                             </select>
                         </div>
                         <div class="form-group">
@@ -70,7 +70,7 @@
                     <div class="row">
                         <div class="col-md-12 radio" *ngFor="let address of addressList">
                             <label id="button">
-                                <input type="radio" name="address" (click) = "changeAddress(address.address_id)">
+                                <input type="radio" name="address" (click) = "selectAddress(address.address_id)">
                                     TypeName : {{ address.type_name}}<br>  
                                     Address :{{ address.address }}
                             </label>
