Design chages in cart,checkout , header and footer components

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -42,6 +42,7 @@
                   <i class="fa fa-times"></i>
                 </td>
               </tr>
+              <!-- <hr class="hr"> -->
               <tr *ngIf="cart.type_id == 2">   
                 <td>
                   <img class="product-image" src="assets/cement.jpg" />
@@ -64,14 +65,15 @@
                   <i class="fa fa-times"></i>
                 </td> 
               </tr>  
+              <!-- <hr class="hr"> -->
             </tbody>   
           </table> 
         </div>
         <div class="totals">
           <div class="totals-item totals-item-total">
-            <label>Grand Total:</label>
+            <label><b> Grand Total:</b></label>
             <!-- <div> -->
-              <p class="totals-value" id="cart-total">&#8360; {{ totGrandamount }}</p>
+              <p class="totals-value" id="cart-total"><b> &#8360; {{ totGrandamount }}</b></p>
             <!-- </div> -->
           </div>
         </div>
