--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -297,6 +297,9 @@ label {
     }
   }
 }  
+// .hr {
+//   // border-bottom: 1px solid rgb(161, 154, 154);
+// }
 .product-image {
   width: 100px;
 }
