--- a/src/app/check-out/check-out.component.scss
+++ b/src/app/check-out/check-out.component.scss
@@ -91,13 +91,35 @@
 #button {
   width: 100%;
   padding: 8px;
-  margin-bottom: 10px;
-  //margin-top: px;
-  margin-bottom: 30px;
-  // border: solid lightgray 1.5px;
-  background-color: #fff;
+  input {
+    display: none;
+  }
+  .user-add {
+    padding-left: 10px;
+    p {
+      margin-bottom: 5px;
+      i {
+        font-size: 21px;
+        margin-right: 5px;
+      }
+    }
+    .add-type {
+      background-color: #82ae46;
+      padding: 10px;
+      font-weight: 600;
+      color: #fff;
+      font-size: 13px;
+    }
+  }
+  
 }
 
+.selected {
+  // background-color: #82ae46;
+  border: 1px solid #82ae46;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px 0px rgb(13, 212, 25);
+}
 .confirm-btn {
   // border-radius: 20px;
   margin-left: 78%;
