--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="navigate-top">
-      <a href="#"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
+      <button class="btn btn-md" (click)="navigateTop()"><i class="fa fa-angle-up" aria-hidden="true"></i></button>
   </div>
 </div>    
 
