--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,9 +7,9 @@
       </div>  
       <div class="col-md-6">
         <div class="social-icons">
-          <i class="fa fa-twitter"></i>
-          <i class="fa fa-facebook-f"></i>
-          <i class="fa fa-instagram"></i>
+          <a href="https://twitter.com/login" target="blank"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.facebook.com" target="blank"><i class="fa fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/accounts/login/?hl=en" target="blank"><i class="fa fa-instagram"></i></a>
         </div>  
       </div>
     </div>
