--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -179,6 +179,10 @@
   }
 }
 
+.bar-row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
 // .bars-input-name {
 //     height:32px !important;
 //     width:120px !important;
