--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -54,9 +54,9 @@
                     </p>
                 </td> 
                 <td class="input1">
-                  <!-- <div class="quantity"> -->
+                  <div class="bar-quant">
                     <input *ngFor="let bars of cart.bar_products" class="custom-input bar-inputs" type="" value="{{bars.quantity}}" (input)="chageCartValue( cart, bars, $event.target.value, 2)" /> 
-                  <!-- </div>    -->
+                  </div>   
                 </td>  
                 <td>
                   <p class="bar-inputs bar-price" *ngFor="let bars of cart.bar_products"> &#8360; {{ bars.value*bars.quantity }}</p>
