--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -281,6 +281,13 @@ label {
       }
       .input1 {
         display: grid;
+        .bar-quant {
+          width: 148px;
+          display: grid;
+          input {
+            margin-left: 42px;
+          }
+        }
       }
       .bar-inputs {
         margin-bottom: 5px;
