--- a/src/app/shared/signup/signup.component.html
+++ b/src/app/shared/signup/signup.component.html
@@ -78,14 +78,13 @@
                 class="form-control mb-2"
                 placeholder="Email"
                 formControlName="email"
-                [ngClass]="{
+              />
+              <!-- [ngClass]="{
                   'is-invalid img':
                     signUpForm.get('email').touched &&
                     signUpForm.get('email').invalid
-                }"
-               
-              />
-              <div
+                }" -->
+              <!-- <div
                 *ngIf="
                   signUpForm.get('email').touched &&
                   signUpForm.get('email').invalid
@@ -98,7 +97,7 @@
                 <div *ngIf="signUpForm.get('email').errors.pattern">
                   Email is must be a valid email 
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="form-group">
               <input
