--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -47,7 +47,7 @@
     font-weight: 600;
     color: #000;
     font-family: poppins, Arial, sans-serif;
-    margin-top: 70px;
+    // margin-top: 70px;
     @include mobile {
       font-size: 20px;
     }
