--- a/src/app/shared/signup/signup.component.scss
+++ b/src/app/shared/signup/signup.component.scss
@@ -18,6 +18,9 @@
       input {
         height: 52px !important;
       }
+      .options {
+        height: 52px !important;
+      }
     }
   }
 }
