--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -44,6 +44,11 @@
                   <input class="form-control" type="text" formControlName="address" />
                 </div>
               </div>
+              <div class="col-md-12">
+                <div class="form-group">
+                  <button class="btn btn-md updatebtn" type="submit">Update</button>
+                </div>
+              </div>
             </div>
           </form>
         </div>  
