--- a/src/app/user-layout/profile/profile.component.scss
+++ b/src/app/user-layout/profile/profile.component.scss
@@ -1,3 +1,9 @@
+.updatebtn {
+    float: right;
+    color: #fff;
+    background-color: #82ae46;
+}
+
 .update-btn {
   text-align: center;
   button {
