--- a/src/app/shared/signup/signup.component.html
+++ b/src/app/shared/signup/signup.component.html
@@ -4,7 +4,7 @@
       <div class="card text-center">
         <div class="card-header">
           Sign Up to continue  
-        </div>
+        </div> 
         <div class="card-body">
           <form
             class="form"
@@ -115,6 +115,20 @@
               <div class="invalid-feedback invalid-txt">
                 Address is Required
               </div>
+            </div>
+            <div class="form-group">
+              <select (ngModelChange)="selectChange1($event)" class="form-control mb-2 "
+               formControlName="addType">options
+               <option value="">Select Address Type</option>
+                <option *ngFor="let addType of addTypesList" value="{{addType.address_type_id}}">{{addType.type_name}}</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <select (ngModelChange)="selectChange2($event)" class="form-control mb-2 options"
+               formControlName="userRoleId">
+               <option value="">Select User role</option>
+                <option *ngFor="let userRole of userRoleList" value="{{userRole.user_role_id}}">{{userRole.role_name}}</option>
+              </select>
             </div>
             <div class="form-group">
               <input
